--- a/index.html
+++ b/index.html
@@ -12,120 +12,91 @@
             <table>
 				<thead>
   					<tr>
-    					<th>Column 0</th>
-                        <th>Column 1</th>
+    					<th>Column 0</th><th>Column 1</th>
   					</tr>
 				</thead>
 				<tbody>
   					<tr>
-    					<td>A</td>
-                        <td></td>
+    					<td>A</td><td></td>
   					</tr>
   					<tr>
-    					<td></td>
-                        <td>B</td>
+    					<td></td><td>B</td>
   					</tr>
   					<tr>
-    					<td></td>
-                        <td>C</td>
+    					<td></td><td>C</td>
   					</tr>
   					<tr>
-    					<td></td>
-                        <td>D</td>
+    					<td></td><td>D</td>
   					</tr>
   					<tr>
-    					<td>E</td>
-                        <td></td>
+    					<td>E</td><td></td>
+  					</tr>
+  					<tr><td>F</td><td></td>
   					</tr>
   					<tr>
-    					<td>F</td>
-                        <td></td>
+    					<td></td><td>G</td>
   					</tr>
   					<tr>
-    					<td></td>
-                        <td>G</td>
+    					<td>H</td><td></td>
   					</tr>
-  					<tr>
-    					<td>H</td>
-                        <td></td>
+                    <tr>
+    					<td>I</td><td></td>
   					</tr>
-                      <tr>
-    					<td>I</td>
-                        <td></td>
+                    <tr>
+    					<td>J</td><td></td>
   					</tr>
-                      <tr>
-    					<td>J</td>
-                        <td></td>
+                    <tr>
+    					<td></td><td>K</td>
   					</tr>
-                      <tr>
-    					<td></td>
-                        <td>K</td>
+                    <tr>
+    					<td></td><td>L</td>
   					</tr>
-                      <tr>
-    					<td></td>
-                        <td>L</td>
+                    <tr>
+    					<td>M</td><td></td>
   					</tr>
-                      <tr>
-    					<td>M</td>
-                        <td></td>
+                    <tr>
+    				    <td>N</td><td></td>
   					</tr>
-                      <tr>
-    					<td>N</td>
-                        <td></td>
+                    <tr>
+    					<td></td><td>O</td>
   					</tr>
-                      <tr>
-    					<td></td>
-                        <td>O</td>
+                    <tr>
+    				    <td>P</td><td></td>
   					</tr>
-                      <tr>
-    					<td>P</td>
-                        <td></td>
+                    <tr>
+    					<td>Q</td><td></td>
   					</tr>
-                      <tr>
-    					<td>Q</td>
-                        <td></td>
+                    <tr>
+    					<td></td><td>R</td>
   					</tr>
-                      <tr>
-    					<td></td>
-                        <td>R</td>
+                    <tr>
+    					<td>S</td><td></td>
   					</tr>
-                      <tr>
-    					<td>S</td>
-                        <td></td>
+                    <tr>
+    					<td>T</td><td></td>
   					</tr>
-                      <tr>
-    					<td>T</td>
-                        <td></td>
+                    <tr>
+    					<td>U</td><td></td>
   					</tr>
-                      <tr>
-    					<td>U</td>
-                        <td></td>
+                    <tr>
+    					<td></td><td>V</td>
   					</tr>
-                      <tr>
-    					<td></td>
-                        <td>V</td>
+                    <tr>
+    					<td></td><td>W</td>
   					</tr>
-                      <tr>
-    					<td></td>
-                        <td>W</td>
+                    <tr>
+    					<td>X</td><td></td>
   					</tr>
-                      <tr>
-    					<td>X</td>
-                        <td></td>
+                    <tr>
+    					<td>Y</td><td></td>
   					</tr>
-                      <tr>
-    					<td>Y</td>
-                        <td></td>
+                    <tr>
+    					<td></td><td>Z</td>
   					</tr>
-                      <tr>
-    					<td></td>
-                        <td>Z</td>
-  					</tr>
-                      </tr>
-                      <tr>
-                          <td>?</td>
-                          <td>?</td>
-                      </tr>
+                    </tr>
+                    <tr>
+                        <td>?</td><td>?</td>
+                    </tr>
 				</tbody>
 			</table>
         </div>
