--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-widthm initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alphabet</title>
     </head>
     <body>
@@ -93,7 +93,6 @@
                     <tr>
     					<td></td><td>Z</td>
   					</tr>
-                    </tr>
                     <tr>
                         <td>?</td><td>?</td>
                     </tr>
