--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <table>
 				<thead>
   					<tr>
-    					<th>Column 0</th><th>Column 1</th>
+    					<th scope="col">Column 0</th><th scope="col">Column 1</th>
   					</tr>
 				</thead>
 				<tbody>
@@ -31,7 +31,8 @@
   					<tr>
     					<td>E</td><td></td>
   					</tr>
-  					<tr><td>F</td><td></td>
+  					<tr>
+                        <td>F</td><td></td>
   					</tr>
   					<tr>
     					<td></td><td>G</td>
@@ -93,9 +94,6 @@
                     <tr>
     					<td></td><td>Z</td>
   					</tr>
-                    <tr>
-                        <td>?</td><td>?</td>
-                    </tr>
 				</tbody>
 			</table>
         </div>
